# modular

./: verify_batching.py
bazel/: mojo.MODULE.bazel
docs/max/: changelog.md
max/examples/diffusion/: ltx2_offline_generation.py  offline_generation.py  simple_offline_generation.py  simple_offline_video_generation.py
max/kernels/src/buffer/: dimlist.mojo
max/kernels/src/linalg/: accumulate.mojo  transpose.mojo
max/kernels/src/nn/: conv.mojo  conv_transpose.mojo  flash_attention.mojo  gather_scatter.mojo  kv_cache_ragged.mojo  mha.mojo  mha_utils.mojo  mla.mojo
max/kernels/src/quantization/: qmatmul.mojo  qmatmul_k.mojo
max/kernels/src/shmem/: _mpi.mojo
max/kernels/test/nn/: test_conv2d_winograd.mojo  test_nms.mojo
max/python/max/: functional.py  tensor.py
max/python/max/entrypoints/: diffusion.py  pipelines.py
max/python/max/experimental/: functional.py  tensor.py
max/python/max/interfaces/: __init__.py  generation.py  task.py
max/python/max/nn/: __init__.py  activations.py  conv.py  kernels.py
max/python/max/pipelines/: __init__.py
max/python/max/serve/: api_server.py
max/tests/integration/API/python/interfaces/: BUILD.bazel
max/tests/integration/API/python/interfaces/pixel_generation/: test_pixel_generation_request.py
max/tests/integration/kv_cache/: test_kv_cache_distributed_gpu.py  test_kv_cache_matmul.py  test_kv_cache_radd_gpu.py  test_kv_cache_store_gpu.py  test_rotary_embedding.py
mojo/docs/: changelog.md
mojo/docs/manual/metaprogramming/: comptime-evaluation.mdx
mojo/stdlib/benchmarks/format/: bench_tstring.mojo
(+274 files in other folders)
