load("//bazel:api.bzl", "modular_py_test")

package(default_visibility = [
    "//:__pkg__",
    "//SDK/integration-test:__subpackages__",
    "//max/tests:__subpackages__",
    "//oss/modular/max/tests:__subpackages__",
])

modular_py_test(
    name = "tests",
    size = "large",
    srcs = glob([
        "*.py",
        "pixel_generation/*.py",
        "text_generation/*.py",
    ]),
    tags = ["no-pydeps"],  # TODO: Fix and re-enable
    deps = [
        "//max/python/max/interfaces",
        "//max/python/max/support",
    ],
)
